@@ -5,7 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.springdoc.openapi-gradle-plugin' version '1.8.0'
     id 'org.sonarqube' version '4.4.1.3373'
-    id 'jacoco'
+  //  id 'jacoco'
 }
 
 group = 'ar.edu.unq.desapp.grupoG'
@@ -41,7 +41,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
 
-jacoco {
+/*jacoco {
     toolVersion = "0.8.8"
 }
 
@@ -51,18 +51,27 @@ tasks.jacocoTestReport {
         html.required = true
         csv.required = false
     }
-}
+}*/
 
 tasks.test {
     useJUnitPlatform()
-    finalizedBy tasks.jacocoTestReport
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+//  finalizedBy tasks.jacocoTestReport
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:unchecked"
+}
 sonar {
     properties {
         property "sonar.projectKey", "ezepdev_unqui-desapp-2024s1-grupoG"
         property "sonar.organization", "ezepdev"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.gradle.skipCompile", "true"
     }
+}
+
+tasks.named('sonarqube').configure {
+    dependsOn(tasks.named('test'))
 }
